added video loading toggle

--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "A convenient list of all the items and their effects from the game Risk of Rain.",
   "main": "index.js",
+  "scripts": {
+    "dev:watch": "nodemon --exec http-server"
+  },
   "repository": "https://github.com/Fustran/rainstash.git",
   "author": "Josh Fangrad",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "http-server": "^0.11.1",
+    "nodemon": "^1.17.5"
+  }
 }
