--- a/items/vanilla_items/itemManifest.json
+++ b/items/vanilla_items/itemManifest.json
@@ -207,7 +207,7 @@
         "Warbanner": {
             "name": "Warbanner",
             "description": "On level up drop a banner. Raise attack/move speed by 30% and damage by 4.",
-            "stack": "area of effect.",
+            "stack": "Area of effect increased by 40% of base size.",
             "hasVideo": true,
             "itemClass": "common items"
         },
@@ -410,7 +410,7 @@
         "Toxic_Worm": {
             "name": "Toxic Worm",
             "description": "Infect enemies, dealing 50% damage/sec. Bounces to other enemies on death.",
-            "stack": "Allows infection on multiple targets.",
+            "stack": "Increases damage dealt.",
             "unlock": "Acrid: Spread 10,000 feet of \"Caustic Sludge\".",
             "hasVideo": true,
             "itemClass": "uncommon items"
@@ -967,7 +967,7 @@
     
         "Sacrifice": {
             "name": "Sacrifice",
-            "description": "Enemies have a chance to drop items, but chests no longer spawn. Stacks with <span class='uncommon'>56 Leaf Clover</span>.",
+            "description": "Enemies have a chance to drop items, but chests no longer spawn. Does not share the same drop roll as <span class='green'>56 Leaf Clover</span>.",
             "unlock": "Found in the Magma Barracks.",
             "itemClass": "special items"
         },
