starstorm addition & minor changes

--- a/public/items/ror1/vanilla/itemManifest.json
+++ b/public/items/ror1/vanilla/itemManifest.json
@@ -1008,7 +1008,7 @@
             "name": "Honor",
             "description": "Enemies always spawn as elites.",
             "unlock": "Found in the Desolate Forest.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Honor.png",
@@ -1018,7 +1018,7 @@
             "name": "Kin",
             "description": "Only one enemy type will spawn per stage.",
             "unlock": "Found in Dried Lake.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Kin.png",
@@ -1028,7 +1028,7 @@
             "name": "Distortion",
             "description": "Locks a random skill every minute, but gives you 25% cooldown reduction.",
             "unlock": "Found in the Damp Caverns.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Distortion.png",
@@ -1038,7 +1038,7 @@
             "name": "Spite",
             "description": "Enemies release small bouncing explosives. These explosives only hurt the player.",
             "unlock": "Found in the Sky Meadow.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Spite.png",
@@ -1048,7 +1048,7 @@
             "name": "Glass",
             "description": "You start with 500% more damage, but have 10% of your normal HP. Upon leveling up, recieve 300% and 25% of the damage and health increase, respectively.",
             "unlock": "Found in the Ancient Valley.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Glass.png",
@@ -1058,7 +1058,7 @@
             "name": "Enigma",
             "description": "Enigma will replace your active item. Using enigma will trigger a random use item effect. When Enigma is active, Small Enigmas will drop instead of Use Items.",
             "unlock": "Found in the Sunken Tomb.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Enigma.png",
@@ -1068,7 +1068,7 @@
             "name": "Sacrifice",
             "description": "Enemies have a chance to drop items, but chests no longer spawn. Does not share the same drop roll as 56 Leaf Clover.",
             "unlock": "Found in the Magma Barracks.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Sacrifice.png",
@@ -1078,7 +1078,7 @@
             "name": "Command",
             "description": "Items are replaced with boxes that allow the player to choose the dropped item.",
             "unlock": "Found in the Hive Cluster.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Command.png",
@@ -1088,7 +1088,7 @@
             "name": "Spirit",
             "description": "Run faster when at lower HP. Applies to monsters as well as the player.",
             "unlock": "Found in the Temple of the Elders.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Spirit.png",
@@ -1098,7 +1098,7 @@
             "name": "Origin",
             "description": "Every 10 minutes, a portal materializes and summons 3 Purple imps, and 1 Imp Vanguard.",
             "unlock": "Defeat Providence with all other artifacts activated.",
-            "itemClass": "Special Items",
+            "itemClass": "Artifacts",
             "extraInfo": "ARTIFACT. This item must be toggled on the character select screen.",
             "hasVideo": false,
             "imgName": "item_Origin.png",
@@ -1151,7 +1151,7 @@
         "Use Items": {
             "color": "#ff8000"
         },
-        "Special Items": {
+        "Artifacts": {
             "color": "#ab6fbe",
             "textFlair": "ARTIFACT. This item must be toggled on the character select screen."
         },
